feat: complete workshop page with detailed steps and images, update nav and footer

--- a/temel-egitim.html
+++ b/temel-egitim.html
@@ -72,7 +72,9 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="assets/logo.png" alt="Elisleme Akademi">
+                    <a href="index.html">
+                        <img src="assets/logo.png" alt="Elisleme Akademi">
+                    </a>
                 </div>
                 <div class="menu-toggle" id="mobile-menu" onclick="toggleMobileMenu()">
                     <span class="bar"></span>
@@ -82,6 +84,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Ana Sayfa</a></li>
                     <li><a href="temel-egitim.html" class="active">Temel Eğitim</a></li>
+                    <li><a href="workshop.html">Workshoplar</a></li>
                     <li><a href="malzemeler.html">Malzemeler</a></li>
                     <li><a href="terimler.html">Terimler</a></li>
                     <li><a href="basvuru.html">Başvuru</a></li>
