--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="assets/logo.png" alt="Elisleme Akademi">
+                    <a href="index.html">
+                        <img src="assets/logo.png" alt="Elisleme Akademi">
+                    </a>
                 </div>
                 <div class="menu-toggle" id="mobile-menu" onclick="toggleMobileMenu()">
                     <span class="bar"></span>
@@ -36,6 +38,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Ana Sayfa</a></li>
                     <li><a href="temel-egitim.html">Temel Eğitim</a></li>
+                    <li><a href="workshop.html">Workshoplar</a></li>
                     <li><a href="malzemeler.html">Malzemeler</a></li>
                     <li><a href="terimler.html">Terimler</a></li>
                     <li><a href="basvuru.html">Başvuru</a></li>
